# serializer version: 1
# name: test_always_failing[binary]
  '''
  Falsifying example: inner(
      b=b'',
  )
  '''
# ---
# name: test_always_failing[booleans]
  '''
  Falsifying example: inner(
      b=False,
  )
  '''
# ---
# name: test_always_failing[builds]
  '''
  Falsifying example: inner(
      p=Pair(x=0, y=''),
  )
  '''
# ---
# name: test_always_failing[builds_from_type]
  '''
  Falsifying example: inner(
      xs=[],
  )
  '''
# ---
# name: test_always_failing[builds_lambda_mixed_args]
  '''
  Falsifying example: inner(
      x=Opaque(),
  )
  '''
# ---
# name: test_always_failing[builds_lambda_positional_args]
  '''
  Falsifying example: inner(
      x=Opaque(),
  )
  '''
# ---
# name: test_always_failing[builds_lambda_returning_object]
  '''
  Falsifying example: inner(
      x=Pair(0, ''),
  )
  '''
# ---
# name: test_always_failing[builds_lambda_with_defaults]
  '''
  Falsifying example: inner(
      x=Opaque(),
  )
  '''
# ---
# name: test_always_failing[builds_multi_arg_lambda]
  '''
  Falsifying example: inner(
      x=Opaque(),
  )
  '''
# ---
# name: test_always_failing[builds_no_arg_lambda]
  '''
  Falsifying example: inner(
      x=Opaque(),
  )
  '''
# ---
# name: test_always_failing[builds_single_arg_lambda]
  '''
  Falsifying example: inner(
      x=Opaque(),
  )
  '''
# ---
# name: test_always_failing[characters]
  '''
  Falsifying example: inner(
      c='0',
  )
  '''
# ---
# name: test_always_failing[complex_numbers]
  '''
  Falsifying example: inner(
      z=0j,
  )
  '''
# ---
# name: test_always_failing[dates]
  '''
  Falsifying example: inner(
      d=datetime.date(2000, 1, 1),
  )
  '''
# ---
# name: test_always_failing[datetimes]
  '''
  Falsifying example: inner(
      dt=datetime.datetime(2000, 1, 1, 0, 0),
  )
  '''
# ---
# name: test_always_failing[decimals]
  '''
  Falsifying example: inner(
      d=Decimal('Infinity'),
  )
  '''
# ---
# name: test_always_failing[deferred]
  '''
  Falsifying example: inner(
      x=0,
  )
  '''
# ---
# name: test_always_failing[dictionaries]
  '''
  Falsifying example: inner(
      d={},
  )
  '''
# ---
# name: test_always_failing[emails]
  '''
  Falsifying example: inner(
      e='0@A.AC',
  )
  '''
# ---
# name: test_always_failing[filter]
  '''
  Falsifying example: inner(
      n=0,
  )
  '''
# ---
# name: test_always_failing[fixed_dictionaries]
  '''
  Falsifying example: inner(
      d={'name': '', 'age': 0},
  )
  '''
# ---
# name: test_always_failing[flatmap_lambda]
  '''
  Falsifying example: inner(
      x='',
  )
  '''
# ---
# name: test_always_failing[floats]
  '''
  Falsifying example: inner(
      x=0.0,
  )
  '''
# ---
# name: test_always_failing[fractions]
  '''
  Falsifying example: inner(
      f=Fraction(0, 1),
  )
  '''
# ---
# name: test_always_failing[from_regex]
  '''
  Falsifying example: inner(
      s='aaa',
  )
  '''
# ---
# name: test_always_failing[from_type]
  '''
  Falsifying example: inner(
      x=IPv4Address('0.0.0.0'),
  )
  '''
# ---
# name: test_always_failing[frozensets]
  '''
  Falsifying example: inner(
      xs=frozenset(),
  )
  '''
# ---
# name: test_always_failing[functions]
  '''
  Falsifying example: inner(
      f=lambda x: x,
  )
  '''
# ---
# name: test_always_failing[integers]
  '''
  Falsifying example: inner(
      n=0,
  )
  '''
# ---
# name: test_always_failing[ip_addresses]
  '''
  Falsifying example: inner(
      ip=IPv4Address('0.0.0.0'),
  )
  '''
# ---
# name: test_always_failing[iterables]
  '''
  Falsifying example: inner(
      it=iter([]),
  )
  '''
# ---
# name: test_always_failing[just]
  '''
  Falsifying example: inner(
      x=42,
  )
  '''
# ---
# name: test_always_failing[lists]
  '''
  Falsifying example: inner(
      xs=[],
  )
  '''
# ---
# name: test_always_failing[many_args]
  '''
  Falsifying example: inner(
      a=0,
      b=0.0,
      c='',
      d=False,
      e=None,
  )
  '''
# ---
# name: test_always_failing[map_chained_lambdas_opaque]
  '''
  Falsifying example: inner(
      x=Opaque(),
  )
  '''
# ---
# name: test_always_failing[map_lambda_opaque_result]
  '''
  Falsifying example: inner(
      x=Opaque(),
  )
  '''
# ---
# name: test_always_failing[map_to_bytes]
  '''
  Falsifying example: inner(
      b=hashlib.sha256(b'').digest(),
  )
  '''
# ---
# name: test_always_failing[map_to_str]
  '''
  Falsifying example: inner(
      s='0',
  )
  '''
# ---
# name: test_always_failing[mixed_strategies]
  '''
  Falsifying example: inner(
      xs=[],
      mapping={},
      choice=10,
  )
  '''
# ---
# name: test_always_failing[none]
  '''
  Falsifying example: inner(
      n=None,
  )
  '''
# ---
# name: test_always_failing[one_of]
  '''
  Falsifying example: inner(
      x=0,
  )
  '''
# ---
# name: test_always_failing[permutations]
  '''
  Falsifying example: inner(
      p=[0, 1, 2, 3, 4],
  )
  '''
# ---
# name: test_always_failing[randoms]
  '''
  Falsifying example: inner(
      r=HypothesisRandom(generated data),
  )
  '''
# ---
# name: test_always_failing[recursive]
  '''
  Falsifying example: inner(
      x=0,
  )
  '''
# ---
# name: test_always_failing[sampled_from]
  '''
  Falsifying example: inner(
      x='alice',
  )
  '''
# ---
# name: test_always_failing[sets]
  '''
  Falsifying example: inner(
      xs=set(),
  )
  '''
# ---
# name: test_always_failing[shared]
  '''
  Falsifying example: inner(
      x=0,
  )
  '''
# ---
# name: test_always_failing[slices]
  '''
  Falsifying example: inner(
      s=slice(None, None, None),
  )
  '''
# ---
# name: test_always_failing[text]
  '''
  Falsifying example: inner(
      s='',
  )
  '''
# ---
# name: test_always_failing[timedeltas]
  '''
  Falsifying example: inner(
      td=datetime.timedelta(0),
  )
  '''
# ---
# name: test_always_failing[times]
  '''
  Falsifying example: inner(
      t=datetime.time(0, 0),
  )
  '''
# ---
# name: test_always_failing[tuples]
  '''
  Falsifying example: inner(
      t=(0, '', False),
  )
  '''
# ---
# name: test_always_failing[two_args]
  '''
  Falsifying example: inner(
      n=0,
      s='',
  )
  '''
# ---
# name: test_always_failing[uuids]
  '''
  Falsifying example: inner(
      u=UUID('e3e70682-c209-4cac-629f-6fbed82c07cd'),
  )
  '''
# ---
# name: test_always_failing_explain[explain_from_regex]
  '''
  Falsifying example: inner(
      s='00',  # or any other generated value
  )
  '''
# ---
# name: test_always_failing_explain[explain_map_to_str]
  '''
  Falsifying example: inner(
      s='0',  # or any other generated value
  )
  '''
# ---
# name: test_always_failing_explain[map_lambda_explain_forces_call_style]
  '''
  Falsifying example: inner(
      x=1,  # or any other generated value
  )
  '''
# ---
